<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CatalogueActivity">

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_retour" />

    <TextView
        android:id="@+id/tvTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRetour"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/catalogue_titre"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgVoitures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitre"
        android:layout_marginTop="50dp">

        <RadioButton
            android:id="@+id/rbClio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_clio" />

        <RadioButton
            android:id="@+id/rb208"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/label_208" />

        <RadioButton
            android:id="@+id/rbDuster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/label_duster" />

    </RadioGroup>

    <Button
        android:id="@+id/btnContinuer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_continuer" />

</RelativeLayout>
