<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/app_titre"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitre"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_nom"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnLouer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editNom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/btn_louer" />

    <Button
        android:id="@+id/btnProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLouer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/btn_profil" />

</RelativeLayout>
