<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ContratActivity">

    <TextView
        android:id="@+id/tvTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/contrat_titre"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitre"
        android:layout_marginTop="40dp"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvClient"
        android:layout_marginTop="12dp"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvVoitureContrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDate"
        android:layout_marginTop="30dp"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvDuree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvVoitureContrat"
        android:layout_marginTop="12dp"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvPrixContrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDuree"
        android:layout_marginTop="12dp"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvTotalContrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPrixContrat"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_profil" />

    <Button
        android:id="@+id/btnAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_accueil" />

</RelativeLayout>
